# smultron

./: docker-compose.yml
coap_discovery/: run
device/alpha/: README.md  platformio.ini
device/alpha/src/: coap.cpp  coap.h  main.cpp  mdns.cpp  mdns.h  util.cpp  util.h  wifi.cpp  wifi.h
gateway/: Cargo.toml
gateway/src/: config.rs  debugger.rs  device.rs  gateway.rs  gql_plug.rs  hub.rs  ipso.rs  main.rs  service.rs  service_finder.rs  timeout.rs
gateway/src/application/actor/device/: mod.rs
gateway/src/application/actor/device_manager/: mod.rs
gateway/src/application/actor/hub/: mod.rs  worker.rs
gateway/src/application/actor/service_finder/: mod.rs  port.rs  task.rs  worker.rs
gateway/src/application/port/: mod.rs
gateway/src/device/: mod.rs
gateway/src/device_manager/: mod.rs
gateway/src/domain/: device.rs  get_devices.rs  mdns_service.rs  mod.rs  resource_instance.rs  service_record.rs
gateway/src/gql/: handler.rs  mod.rs  model.rs  query.rs  subscription.rs
gateway/src/http_api/: mod.rs
gateway/src/hub/: mod.rs  worker.rs
gateway/src/interface/: mod.rs
gateway/src/interface/adapter/: mod.rs
gateway/src/interface/gql/: mod.rs  model.rs  query.rs  subscription.rs
gateway/src/service_finder/: event.rs  manager.rs  mod.rs  port.rs  task.rs  worker.rs
mdns_service/: run
server/: database.sql  go.mod  go.sum  main.go  makefile  readme.md
server/cmd/server/: main.go
server/script/: publish-sensor-discovered.zsh  publish-thing-discovered.zsh  publish_boolean_reading_registered.zsh  publish_i32_reading_registered.zsh
(+10 files in other folders)
