[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
mdns = "3.0.0"
tokio = { version = "1.32.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["valuable"] }
tracing-attributes = "0.1.26"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
coapium = { git = "https://github.com/fabrlyn/coapium.git" }
rand = "0.8.5"
